ocaml-batteries (1.2.2-1) UNRELEASED; urgency=low

  [ Stéphane Glondu ]
  * Add 0002-Fix-build-with-OCaml-3.12.0.patch (Closes: #586493)

  [ Mehdi Dogguy ]
  * New upstream release

 -- Mehdi Dogguy <mehdi@debian.org>  Wed, 14 Jul 2010 20:31:02 +0200

ocaml-batteries (1.1.0-2) unstable; urgency=low

  * Add myself to Uploaders (and remove Zack as he asked).
  * Fix configuration of Batteries (Closes: #578671).
  * Bump ocaml version in build-dependencies to (>= 3.11.1-3~) and
    dh-ocaml (>= 0.9~).
  * Bump quilt version to (>= 0.46-7~).
  * Add a debian/source/format (keep 1.0 for now).
  * Fix binary-control-field-duplicates-source

 -- Mehdi Dogguy <mehdi@debian.org>  Thu, 03 Jun 2010 13:57:15 +0200

ocaml-batteries (1.1.0-1) unstable; urgency=low

  * New upstream release
    - major changes, "diet" version of the library
    - fix old FTBFS error, due to major code changes (Closes: #569455)
  * Revamp packaging
    - adapt to new stuff shipped by upstream
    - switch from CDBS to dh
    - adapt dependencies (generally: reduce them)
  * debian/patches/
    - remove old debian/patches/{debian-specific-installation-paths,
      debian-specific-info-on-doc-availability} as obsolete
    - new patch 0001-install-fix-for-bytecode-only-build: avoid
      installing *.a files with bytecode only compilation
  * debian/libbatteries-ocaml-dev.links: remove file, shortend
    /usr/bin/ocaml-batteries to the top-level no longer exists
  * remove debian/README.Debian (previous content is now obsolete)
  * bump Standards-Version to 3.8.4 (no changes needed)
  * debian/watch: update to match new upstream version convention
  * debian/libbatteries-ocaml-{dev,doc}.{docs,examples}: ship only doc
    file from the root dir, other stuff is currently out of date
    (Closes: #514265)

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 06 Mar 2010 16:03:38 +0100

ocaml-batteries (0.20090405+beta1-5) unstable; urgency=low
