@@ -5,8 +5,9 @@ ocaml-batteries (1.2.2-1) UNRELEASED; urgency=low
 
   [ Mehdi Dogguy ]
   * New upstream release
+  * Adapt debian/rules to new upstream's build system.
 
- -- Mehdi Dogguy <mehdi@debian.org>  Wed, 14 Jul 2010 20:31:02 +0200
+ -- Mehdi Dogguy <mehdi@debian.org>  Wed, 14 Jul 2010 20:31:33 +0200
 
 ocaml-batteries (1.1.0-2) unstable; urgency=low
 
